<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ContextLogger</string>
    <string name="service_status">ContextLogger status:</string>
    <string name="start_service_instr">Press \'Start service\' to start the ContextLogger service with the configured sensors.</string>
  	<string name="choose_activity_instr">Start/Stop an activity</string>
    <string name="service_running">Running</string>
    <string name="service_stopped">Stopped</string>
    <string name="btn_start_service">Start logging</string>
    <string name="btn_stop_service">Stop logging</string>
    <string name="btn_start_activity">Start activity</string>
    <string name="btn_stop_activity">Stop activity</string>
    <string name="btn_upload">Upload db</string>
    <string name="btn_export">Export data to memory card</string>
    <string name="activity_prompt">Choose an activity</string>
    <string-array name="activity_array">
        <item>At home</item>
        <item>At work</item>
        <item>Walking</item>
        <item>Cycling</item>
        <item>Driving a car</item>
        <item>In a bus</item>
        <item>In a train</item>
        <item>In a subway</item>
        <item>Taking a taxi</item>
    </string-array>
    
    <string name="event_stop">Stop activity</string>    
    <string name="event_invalidate">Invalidate activity</string>    
    <string name="view_history">View history</string>
    <string name="select_activity_instr">Start an activity</string>  
    <string name="add_tag">Add a new activity</string> 
    <string name="add_tag_dialog_title">Add a new activity</string>
    <string name="add_tag_hint">input activity name</string> 
	<string name="save">Save</string>  
	<string name="no_data">There is no event data yet.</string>   
	<string name="close">Close</string>
	<string name="cancel">Cancel</string>  
	<string name="ok">OK</string> 
	<string name="app_quit_title">Quit</string> 
	<string name="app_quit_content">Are you sure you want to quit from the application and stop logging the data from sensors?</string> 
	<string name="start">Start</string>
    <string name="stop">Stop</string>	
	<string name="shutdown">Quit</string>
	<string name="input_note">input note</string>	
	<string name="save_note">Save</string>
</resources>
